Refactor computation of stereo range maps from Metashape camera pairs. Implement functions to compare projections and ranges estimates against simplestereo.

--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -56,6 +56,7 @@
     "from pathlib import Path\n",
     "\n",
     "import Metashape\n",
+    "import plotly.express as px\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -66,22 +67,25 @@
     "        scale: float = 1.0\n",
     "    else:\n",
     "    \tscale: float = chunk.transform.scale\n",
-    "\t\n",
+    "\n",
+    "    logger.info(f\"chunk scale: {scale}\")\n",
     "    \n",
     "    for camera in tqdm(chunk.cameras, desc=\"Exporting rendered range maps...\"):\n",
     "        if not camera.transform:\n",
     "            continue\n",
     "\n",
     "        output_path: Path = directory / f\"{camera.label}.tiff\"\n",
-    "            \n",
+    "        \n",
     "        range_map: Metashape.Image = chunk.model.renderDepth(camera.transform, camera.sensor.calibration, add_alpha=False)\n",
     "        range_map: Metashape.Image = range_map * scale\n",
     "        range_map: Metashape.Image = range_map.convert(\" \",\"F32\")\n",
-    "        \n",
-    "        compression = Metashape.ImageCompression()\n",
-    "        compression.tiff_compression = Metashape.ImageCompression().TiffCompressionDeflate\n",
-    "        \n",
-    "        range_map.save(str(output_path), compression=compression)"
+    "\n",
+    "        save_range_map: bool = False\n",
+    "        if save_range_map:\n",
+    "            compression = Metashape.ImageCompression()\n",
+    "            compression.tiff_compression = Metashape.ImageCompression().TiffCompressionDeflate\n",
+    "            \n",
+    "            range_map.save(str(output_path), compression=compression)"
    ]
   },
   {
