--- a/notebooks/stereo_disparity_filter.ipynb
+++ b/notebooks/stereo_disparity_filter.ipynb
@@ -72,7 +72,7 @@
     "    \"\"\"\n",
     "    \n",
     "    min_disparity: int = 0\n",
-    "    num_disparities: int = 6 * 16 # NOTE: 112\n",
+    "    num_disparities: int = 7 * 16 # NOTE: 112\n",
     "    block_size: int = 5\n",
     "    window_size: int = 3\n",
     "    disp12_max_diff: int = 1\n",
@@ -153,96 +153,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726da18f-4d6c-46f5-83e1-096c099ba394",
-   "metadata": {},
-   "source": [
-    "### Add debug code from simplestereo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e48c848-b9ae-4e74-89e6-658377d2f263",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_q_matrix(baseline, K1, K2) -> np.ndarray:\n",
-    "    \"\"\" \"\"\"\n",
-    "    b   = baseline\n",
-    "    fx  = K1[0,0]\n",
-    "    fy  = K2[1,1]\n",
-    "    cx1 = K1[0,2]\n",
-    "    cx2 = K2[0,2]\n",
-    "    a1  = K1[0,1]\n",
-    "    a2  = K2[0,1]\n",
-    "    cy  = K1[1,2]\n",
-    "    \n",
-    "    Q = np.eye(4, dtype=np.float64)\n",
-    "    \n",
-    "    Q[0,1] = -a1/fy\n",
-    "    Q[0,3] = a1*cy/fy - cx1\n",
-    "    \n",
-    "    Q[1,1] = fx/fy\n",
-    "    Q[1,3] = -cy*fx/fy\n",
-    "                             \n",
-    "    Q[2,2] = 0\n",
-    "    Q[2,3] = -fx\n",
-    "    \n",
-    "    Q[3,1] = (a2-a1)/(fy*b)\n",
-    "    Q[3,2] = 1/b                        \n",
-    "    Q[3,3] = ((a1-a2)*cy+(cx2-cx1)*fy)/(fy*b)\n",
-    "    \n",
-    "    return Q\n",
-    "\n",
-    "\n",
-    "def debug_stereo(calibration: StereoCalibration, homographies: RectifyingHomography, pixel_maps: RectifyingPixelMap) -> None:\n",
-    "    \"\"\"Debug stereo transformations. Based on \"\"\"\n",
-    "        # Homogeneous transformations\n",
-    "    T1 = np.hstack( (np.eye(3), np.zeros((3, 1))) ) # Camera one has identity rotation and zero translation\n",
-    "    T2 = np.hstack( (calibration.extrinsics.rotation, calibration.extrinsics.location.reshape(3,1)) )\n",
-    "    \n",
-    "    # Original projection matrices\n",
-    "    Po1 = calibration.master.projection.dot(T1)\n",
-    "    Po2 = calibration.slave.projection.dot(T2)\n",
-    "\n",
-    "    # Camera centers and baseline\n",
-    "    C1 = np.zeros(3)\n",
-    "    C2 = -np.linalg.inv(Po2[:, :3]).dot(Po2[:,3])\n",
-    "    B = np.linalg.norm(C2)\n",
-    "\n",
-    "    Rcommon = homographies.rotation\n",
-    "    \n",
-    "    # Rectified camera matrices\n",
-    "    K1 = pixel_maps.master.projection\n",
-    "    K2 = pixel_maps.slave.projection\n",
-    "    \n",
-    "    # Rectified projections\n",
-    "    P1 = K1.dot(Rcommon).dot(np.hstack((np.eye(3), -C1[:, None])))\n",
-    "    P2 = K2.dot(Rcommon).dot(np.hstack((np.eye(3), -C2[:, None])))\n",
-    "\n",
-    "    Q: np.ndarray = compute_q_matrix(B, K1, K2)\n",
-    "    \n",
-    "    logger.info(\"---------- Projections ----------\")\n",
-    "    logger.info(f\"Po1: {Po1}\")\n",
-    "    logger.info(f\"Po2: {Po2}\")\n",
-    "    logger.info(\"---------------------------------\")\n",
-    "\n",
-    "    logger.info(\"---------- Camera centers ----------\")\n",
-    "    logger.info(f\"C1: {C1}\")\n",
-    "    logger.info(f\"C2: {C2}\")\n",
-    "    logger.info(f\"B: {B}\")\n",
-    "    logger.info(\"------------------------------------\")\n",
-    "    \n",
-    "    logger.info(\"---------- Projections ----------\")\n",
-    "    logger.info(f\"P1: {P1}\")\n",
-    "    logger.info(f\"P2: {P2}\")\n",
-    "    logger.info(\"---------------------------------\")\n",
-    "\n",
-    "    logger.info(f\"Q: {Q}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da21757e-2d86-41db-bcf6-12b47b0361d1",
    "metadata": {},
    "source": [
@@ -292,77 +202,57 @@
     "    range_map: np.ndarray = np.where(range_map < 0.0, INVALID_RANGE, range_map)\n",
     "\n",
     "    return range_map\n",
-    "\n",
-    "\n",
-    "def metashape_stereo_processing(\n",
-    "    chunk: Metashape.Chunk, \n",
-    "    sensor_pair: SensorPair, \n",
-    "    camera_pairs: list[CameraPair]\n",
-    ") -> None:\n",
-    "    \"\"\"Process the stereo images in a Metashape chunk.\"\"\"\n",
     "    \n",
+    "\n",
+    "def process_stereo_images(chunk: Metashape.Chunk, sensors: SensorPair, camera_pairs: list[CameraPair]):\n",
+    "    \"\"\"Get the stereo images\"\"\"\n",
+    "\n",
     "    # Convert a pair of Metashape sensors to a stereo calibration\n",
-    "    calibration: StereoCalibration = compute_stereo_calibration(sensor_pair)\n",
+    "    calibration: StereoCalibration = compute_stereo_calibration(sensors)\n",
     "\n",
-    "    # Estimate homographies that transforms the projects to the same plane\n",
+    "    focal_length: float = calibration.master.focal_length\n",
+    "    baseline: float = calibration.baseline\n",
+    "\n",
+    "    logger.info(focal_length)\n",
+    "    logger.info(baseline)\n",
+    "\n",
+    "    # Estimate homographies and pixel maps\n",
     "    homographies: RectifyingHomography = compute_rectifying_homographies(calibration)\n",
-    "\n",
-    "    # Estimate transformations that rectify the image pixels\n",
     "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(calibration, homographies)\n",
-    "        \n",
-    "    for camera_pair in camera_pairs:\n",
+    "    \n",
+    "    for index, camera_pair in enumerate(camera_pairs):\n",
     "\n",
-    "        # Convert Metashape images to Numpy arrays\n",
+    "        logger.info(f\"Camera: {camera_pair.master.label}\")\n",
+    "\n",
     "        master_image: np.ndarray = np.squeeze(image_to_array(camera_pair.master.image()))\n",
     "        slave_image: np.ndarray = np.squeeze(image_to_array(camera_pair.slave.image()))\n",
     "\n",
     "        # Convert RGB to grayscale\n",
     "        master_image: np.ndarray = cv2.cvtColor(master_image, cv2.COLOR_RGB2GRAY)\n",
     "        \n",
-    "        process_stereo_images(\n",
-    "            calibration=calibration,\n",
-    "            homographies=homographies,\n",
-    "            pixel_maps=pixel_maps,\n",
-    "            master_image=master_image,\n",
-    "            slave_image=slave_image,\n",
+    "        rectified_master, rectified_slave = rectify_image_pair(\n",
+    "            master_image, \n",
+    "            slave_image, \n",
+    "            pixel_maps,\n",
     "        )\n",
-    "    \n",
-    "\n",
-    "def process_stereo_images(\n",
-    "    calibration: StereoCalibration,\n",
-    "    homographies: RectifyingHomography,\n",
-    "    pixel_maps: RectifyingPixelMap,\n",
-    "    master_image: np.ndarray, \n",
-    "    slave_image: np.ndarray,\n",
-    ") -> None:\n",
-    "    \"\"\"Get the stereo images\"\"\"\n",
-    "\n",
-    "    focal_length: float = calibration.master.focal_length\n",
-    "    baseline: float = calibration.baseline\n",
-    "\n",
-    "    # Rectify the images\n",
-    "    rectified_master, rectified_slave = rectify_image_pair(\n",
-    "        master_image,\n",
-    "        slave_image,\n",
-    "        pixel_maps,\n",
-    "    )\n",
-    "\n",
-    "    # Compute disparity maps with semi-global block matching\n",
-    "    disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=False)\n",
     "        \n",
-    "    # Convert disparity to range estimates\n",
-    "    range_map: np.ndarray = disparity_to_range(disparity_maps[0], 1839.0, baseline)\n",
+    "        disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=False)\n",
+    "        smooth_disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=True)\n",
     "\n",
-    "    figures: dict = {\n",
-    "        \"image\": px.imshow(master_image, origin=\"upper\", color_continuous_scale=\"gray\"),\n",
-    "        \"range\": px.imshow(range_map, origin=\"upper\", zmin=2.0, zmax=3.0),\n",
-    "    }\n",
+    "        # Convert disparity to range estimates\n",
+    "        range_map: np.ndarray = disparity_to_range(disparity_maps[0], 1720.0, baseline)\n",
+    "        smooth_range_map: np.ndarray = disparity_to_range(smooth_disparity_maps[0], 1720.0, baseline)\n",
     "\n",
-    "    for key, figure in figures.items():\n",
-    "        figure.show()\n",
+    "        figures: dict = {\n",
+    "            \"image\": px.imshow(master_image, origin=\"upper\", color_continuous_scale=\"gray\"),\n",
+    "            \"range\": px.imshow(range_map, origin=\"upper\", zmin=2.0, zmax=2.7),\n",
+    "            \"smooth_range\": px.imshow(smooth_range_map, origin=\"upper\", zmin=2.0, zmax=2.7),\n",
+    "        }\n",
     "\n",
-    "    input(\"Press a key...\")\n",
-    "    # raise NotImplementedError(\"process_stereo_images is not implemented\")\n",
+    "        for key, figure in figures.items():\n",
+    "            figure.show()\n",
+    "\n",
+    "        raise NotImplementedError(\"process_stereo_images is not implemented\")\n",
     "\n",
     "\n",
     "def export_stereo_range_maps(chunk: Metashape.Chunk, directory: Path) -> None:\n",
@@ -372,7 +262,7 @@
     "    stereo_groups: list[StereoGroup] = get_stereo_groups(chunk)\n",
     "\n",
     "    for group in stereo_groups:\n",
-    "        metashape_stereo_processing(chunk, group.sensor_pair, group.camera_pairs)\n",
+    "        process_stereo_images(chunk, group.sensor_pair, group.camera_pairs)\n",
     "    \n",
     "    raise NotImplementedError"
    ]
