Implement methods to estimate range maps, normal maps, and 3D points from images. Add imageio library. Update notebooks to new API.

--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -11,8 +11,6 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "import Metashape\n",
-    "\n",
     "from result import Ok, Err, Result\n",
     "\n",
     "from benthoscan.backends import metashape as backend\n",
@@ -55,37 +53,37 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "import imageio.v3 as iio\n",
     "import Metashape\n",
+    "import numpy as np\n",
     "import plotly.express as px\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
-    "def export_rendered_range(chunk: Metashape.Chunk, directory: Path) -> None:\n",
+    "from benthoscan.backends.metashape import (\n",
+    "    render_range_and_normal_maps,\n",
+    "    compute_camera_calibration,\n",
+    ")\n",
+    "from benthoscan.geometry.range_maps import compute_normals_from_range\n",
+    "\n",
+    "\n",
+    "def export_rendered_range(chunk: Metashape.Chunk, range_directory: Path, normal_directory: Path) -> None:\n",
     "    \"\"\"Export range maps rendered from a Metashape mesh.\"\"\"\n",
     "    \n",
-    "    if chunk.transform.scale is None:\n",
-    "        scale: float = 1.0\n",
-    "    else:\n",
-    "    \tscale: float = chunk.transform.scale\n",
+    "    valid_cameras: list[Metashape.Camera] = [camera for camera in chunk.cameras if camera.transform]\n",
     "\n",
-    "    logger.info(f\"chunk scale: {scale}\")\n",
+    "    logger.info(f\"Range directory: {range_directory}\")\n",
+    "    logger.info(f\"Normal directory: {normal_directory}\")\n",
     "    \n",
-    "    for camera in tqdm(chunk.cameras, desc=\"Exporting rendered range maps...\"):\n",
-    "        if not camera.transform:\n",
-    "            continue\n",
-    "\n",
-    "        output_path: Path = directory / f\"{camera.label}.tiff\"\n",
+    "    for camera in tqdm(valid_cameras, desc=\"Exporting rendered range maps...\"):\n",
     "        \n",
-    "        range_map: Metashape.Image = chunk.model.renderDepth(camera.transform, camera.sensor.calibration, add_alpha=False)\n",
-    "        range_map: Metashape.Image = range_map * scale\n",
-    "        range_map: Metashape.Image = range_map.convert(\" \",\"F32\")\n",
+    "        range_map, normal_map = render_range_and_normal_maps(camera)\n",
     "\n",
-    "        save_range_map: bool = False\n",
-    "        if save_range_map:\n",
-    "            compression = Metashape.ImageCompression()\n",
-    "            compression.tiff_compression = Metashape.ImageCompression().TiffCompressionDeflate\n",
-    "            \n",
-    "            range_map.save(str(output_path), compression=compression)"
+    "        range_map: np.ndarray = range_map.astype(np.float16)\n",
+    "        normal_map: np.ndarray = normal_map.astype(np.float16)\n",
+    "\n",
+    "        iio.imwrite(range_directory / f\"{camera.label}.tiff\", range_map)\n",
+    "        iio.imwrite(normal_directory / f\"{camera.label}.tiff\", normal_map)"
    ]
   },
   {
@@ -103,18 +101,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import NamedTuple\n",
+    "\n",
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
     "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
     "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
     "\n",
-    "\n",
-    "output_root: Path = Path(\"/data/kingston_snv_01/rendered_range_maps\")\n",
+    "output_root: Path = Path(\"/data/kingston_snv_01\")\n",
     "\n",
     "# Export rendered depth\n",
     "for chunk in target_chunks:\n",
-    "    directory: Path = output_root / f\"{chunk.label}\"\n",
-    "    export_rendered_range(chunk, directory=directory)"
+    "    \n",
+    "    directories: dict[str, Path] = {\n",
+    "        \"range_maps\": output_root / Path(\"rendered_range_maps\") / f\"{chunk.label}\",\n",
+    "        \"normal_maps\": output_root / Path(\"rendered_normal_maps\") / f\"{chunk.label}\",\n",
+    "    }\n",
+    "    \n",
+    "    export_rendered_range(\n",
+    "        chunk, \n",
+    "        range_directory=directories.get(\"range_maps\"),\n",
+    "        normal_directory=directories.get(\"normal_maps\"),\n",
+    "    )"
    ]
   }
  ],
