--- a/notebooks/export_stereo_range_maps.ipynb
+++ b/notebooks/export_stereo_range_maps.ipynb
@@ -71,13 +71,13 @@
     "    Adopted from: https://github.com/eborboihuc/stereo-matching/blob/master/sgbm.py\n",
     "    \"\"\"\n",
     "    \n",
-    "    min_disparity: int = 0\n",
-    "    num_disparities: int = 6 * 16 # NOTE: 112\n",
-    "    block_size: int = 5\n",
+    "    min_disparity: int = 0 * 16\n",
+    "    num_disparities: int = 7 * 16 # NOTE: 112\n",
+    "    block_size: int = 10\n",
     "    window_size: int = 3\n",
     "    disp12_max_diff: int = 1\n",
     "    uniqueness_ratio: int = 10\n",
-    "    speckle_window_size: int = 50\n",
+    "    speckle_window_size: int = 10\n",
     "    speckle_range: int = 1\n",
     "    pre_filter_cap: int = 63\n",
     "    mode: object = cv2.STEREO_SGBM_MODE_SGBM_3WAY\n",
@@ -166,6 +166,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from benthoscan.geometry.stereo import (\n",
+    "    CameraCalibration,\n",
+    "    StereoCalibration,\n",
+    "    RectifyingHomography,\n",
+    "    RectificationResult,\n",
+    ")\n",
+    "\n",
     "def compute_q_matrix(baseline, K1, K2) -> np.ndarray:\n",
     "    \"\"\" \"\"\"\n",
     "    b   = baseline\n",
@@ -195,7 +202,7 @@
     "    return Q\n",
     "\n",
     "\n",
-    "def debug_stereo(calibration: StereoCalibration, homographies: RectifyingHomography, pixel_maps: RectifyingPixelMap) -> None:\n",
+    "def debug_stereo(calibration: StereoCalibration, homographies: RectifyingHomography, result: RectificationResult) -> None:\n",
     "    \"\"\"Debug stereo transformations. Based on \"\"\"\n",
     "        # Homogeneous transformations\n",
     "    T1 = np.hstack( (np.eye(3), np.zeros((3, 1))) ) # Camera one has identity rotation and zero translation\n",
@@ -213,8 +220,8 @@
     "    Rcommon = homographies.rotation\n",
     "    \n",
     "    # Rectified camera matrices\n",
-    "    K1 = pixel_maps.master.projection\n",
-    "    K2 = pixel_maps.slave.projection\n",
+    "    K1 = result.master.calibration.projection\n",
+    "    K2 = result.slave.calibration.projection\n",
     "    \n",
     "    # Rectified projections\n",
     "    P1 = K1.dot(Rcommon).dot(np.hstack((np.eye(3), -C1[:, None])))\n",
@@ -275,7 +282,7 @@
     "    CameraCalibration,\n",
     "    StereoCalibration,\n",
     "    RectifyingHomography,\n",
-    "    RectifyingPixelMap,\n",
+    "    RectificationResult,\n",
     "    compute_rectifying_homographies,\n",
     "    compute_rectifying_pixel_maps,\n",
     "    rectify_image_pair,\n",
@@ -308,7 +315,7 @@
     "    homographies: RectifyingHomography = compute_rectifying_homographies(calibration)\n",
     "\n",
     "    # Estimate transformations that rectify the image pixels\n",
-    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(calibration, homographies)\n",
+    "    result: RectificationResult = compute_rectifying_pixel_maps(calibration, homographies)\n",
     "        \n",
     "    for camera_pair in camera_pairs:\n",
     "\n",
@@ -322,7 +329,7 @@
     "        process_stereo_images(\n",
     "            calibration=calibration,\n",
     "            homographies=homographies,\n",
-    "            pixel_maps=pixel_maps,\n",
+    "            result=result,\n",
     "            master_image=master_image,\n",
     "            slave_image=slave_image,\n",
     "        )\n",
@@ -331,31 +338,35 @@
     "def process_stereo_images(\n",
     "    calibration: StereoCalibration,\n",
     "    homographies: RectifyingHomography,\n",
-    "    pixel_maps: RectifyingPixelMap,\n",
+    "    result: RectificationResult,\n",
     "    master_image: np.ndarray, \n",
     "    slave_image: np.ndarray,\n",
     ") -> None:\n",
     "    \"\"\"Get the stereo images\"\"\"\n",
     "\n",
-    "    focal_length: float = calibration.master.focal_length\n",
-    "    baseline: float = calibration.baseline\n",
+    "    focal_length: float = result.master.calibration.focal_length\n",
+    "    baseline: float = np.linalg.norm(result.slave.location)\n",
+    "\n",
+    "    logger.info(f\"Focal length:    {focal_length}\")\n",
+    "    logger.info(f\"Baseline:        {baseline}\")\n",
     "\n",
     "    # Rectify the images\n",
     "    rectified_master, rectified_slave = rectify_image_pair(\n",
     "        master_image,\n",
     "        slave_image,\n",
-    "        pixel_maps,\n",
+    "        result,\n",
     "    )\n",
     "\n",
     "    # Compute disparity maps with semi-global block matching\n",
     "    disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=False)\n",
-    "        \n",
+    "    \n",
     "    # Convert disparity to range estimates\n",
-    "    range_map: np.ndarray = disparity_to_range(disparity_maps[0], 1839.0, baseline)\n",
+    "    range_map: np.ndarray = disparity_to_range(disparity_maps[0], focal_length, baseline)\n",
     "\n",
     "    figures: dict = {\n",
-    "        \"image\": px.imshow(master_image, origin=\"upper\", color_continuous_scale=\"gray\"),\n",
-    "        \"range\": px.imshow(range_map, origin=\"upper\", zmin=2.0, zmax=3.0),\n",
+    "        \"master\": px.imshow(rectified_master, origin=\"upper\", color_continuous_scale=\"gray\"),\n",
+    "        \"slave\": px.imshow(rectified_slave, origin=\"upper\", color_continuous_scale=\"gray\"),\n",
+    "        \"range\": px.imshow(range_map, origin=\"upper\", zmin=1.0, zmax=5.0),\n",
     "    }\n",
     "\n",
     "    for key, figure in figures.items():\n",
