--- a/notebooks/range_map_visualization.ipynb
+++ b/notebooks/range_map_visualization.ipynb
@@ -9,23 +9,79 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "import cv2\n",
+    "import imageio.v3 as iio\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
     "\n",
-    "from benthoscan.utils.log import logger\n",
-    "\n",
-    "\n",
+    "from benthoscan.utils.log import logger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b719417-7875-4aeb-8cfb-d1c61b0ba362",
+   "metadata": {},
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0658d5c-43f4-4866-ba5a-7b428ed86ef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "paths = {\n",
     "    \"rendered_range\" : Path(\"/data/kingston_snv_01/rendered_range_maps/r23685bc_20100605_021022/PR_20100605_032556_727_LC16.tiff\"),\n",
     "}\n",
     "\n",
-    "image: np.ndarray = cv2.imread(paths.get(\"rendered_range\"), cv2.IMREAD_UNCHANGED)\n",
+    "range_map: np.ndarray = iio.imread(paths.get(\"rendered_range\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e18825b0-3aad-43bc-acc5-1e86472f0a3e",
+   "metadata": {},
+   "source": [
+    "### Estimate normals from depth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d57d71-d86c-4394-b401-73ffc717154e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from benthoscan.geometry.range_maps import compute_normals_from_range\n",
     "\n",
-    "logger.info(image)\n",
+    "# Create an approximate camera matrix (without rectification)\n",
+    "camera_matrix: np.ndarray = np.array([\n",
+    "    [ 1730.0,    0.0, 694.69 ],\n",
+    "    [    0.0, 1730.0, 493.48 ],\n",
+    "    [    0.0,    0.0,   1.00 ]\n",
+    "])\n",
     "\n",
-    "fig = px.imshow(image)\n",
-    "fig.show()"
+    "normal_map: np.ndarray = compute_normals_from_range(range_map, camera_matrix, flipped=True, normalize_points=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fe6c2d2-56ef-4ce2-958f-2ddb8a2b638d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "figures: dict = {\n",
+    "    \"range\" : px.imshow(range_map),\n",
+    "    \"normal\" : px.imshow(normal_map),\n",
+    "    \"normal_x\" : px.imshow(normal_map[:, :, 0]),\n",
+    "    \"normal_y\" : px.imshow(normal_map[:, :, 1]),\n",
+    "    \"normal_z\" : px.imshow(normal_map[:, :, 2]),\n",
+    "}\n",
+    "\n",
+    "for name, figure in figures.items():\n",
+    "    figure.show()"
    ]
   }
  ],
