--- a/notebooks/stereo_disparity_filter.ipynb
+++ b/notebooks/stereo_disparity_filter.ipynb
@@ -15,7 +15,6 @@
     "\n",
     "from result import Ok, Err, Result\n",
     "\n",
-    "from benthoscan.registration import PointCloud, PointCloudLoader\n",
     "from benthoscan.backends import metashape as backend\n",
     "from benthoscan.utils.log import logger"
    ]
@@ -72,7 +71,7 @@
     "    \"\"\"\n",
     "    \n",
     "    min_disparity: int = 0\n",
-    "    num_disparities: int = 7 * 16 # NOTE: 112\n",
+    "    num_disparities: int = 6 * 16 # NOTE: 112\n",
     "    block_size: int = 5\n",
     "    window_size: int = 3\n",
     "    disp12_max_diff: int = 1\n",
@@ -83,7 +82,7 @@
     "    mode: object = cv2.STEREO_SGBM_MODE_SGBM_3WAY\n",
     "    \n",
     "    p1: int = 8 * 1 * block_size**2 # **2 # Smoothness\n",
-    "    p2: int = 32 * 1 * block_size**2 # **2 # Smoothness - \n",
+    "    p2: int = 32 * 1 * block_size**2 # **2 # Smoothness\n",
     "\n",
     "    return {\n",
     "        \"minDisparity\": min_disparity,\n",
@@ -117,10 +116,13 @@
     "    return filtered_disparity_left\n",
     "    \n",
     "\n",
-    "def compute_disparity_sgbm(image_left: np.ndarray, image_right: np.ndarray, smooth: bool=False):\n",
+    "def compute_disparity_sgbm(\n",
+    "    image_left: np.ndarray, \n",
+    "    image_right: np.ndarray, \n",
+    "    parameters: dict=sgbm_default_parameters(),\n",
+    "    smooth: bool=False\n",
+    ") -> tuple[np.ndarray, np.ndarray]:\n",
     "    \"\"\"Computes the disparity for an image pair using OpenCVs SGBM algorithm.\"\"\"\n",
-    "    \n",
-    "    parameters: dict = sgbm_default_parameters()\n",
     "    \n",
     "    left_matcher = cv2.StereoSGBM_create(**parameters)\n",
     "    right_matcher = cv2.ximgproc.createRightMatcher(left_matcher)\n",
@@ -148,7 +150,19 @@
     "    assert disparity_left.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
     "    assert disparity_right.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
     "\n",
-    "    return disparity_left, disparity_right"
+    "    return disparity_left, disparity_right\n",
+    "\n",
+    "\n",
+    "def disparity_to_range(disparity_map: np.ndarray, focal_length: float, baseline: float) -> np.ndarray:\n",
+    "    \"\"\"Converts disparity to range.\"\"\"\n",
+    "    INVALID_RANGE: float = 0.0\n",
+    "    \n",
+    "    inverse_disparity: np.ndarray = 1.0 / disparity_map\n",
+    "    \n",
+    "    range_map: np.ndarray = inverse_disparity * focal_length * baseline\n",
+    "    range_map: np.ndarray = np.where(range_map < 0.0, INVALID_RANGE, range_map)\n",
+    "\n",
+    "    return range_map"
    ]
   },
   {
@@ -167,104 +181,57 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
+    "import tqdm\n",
+    "    \n",
     "\n",
-    "from benthoscan.backends.metashape.camera_helpers import (\n",
+    "from benthoscan.backends.metashape.data_types import (\n",
+    "    ImagePair,\n",
     "    SensorPair, \n",
     "    CameraPair,\n",
     "    StereoGroup,\n",
+    ")\n",
+    "\n",
+    "from benthoscan.backends.metashape.camera_helpers import (\n",
     "    compute_camera_calibration,\n",
     "    compute_stereo_calibration,\n",
-    "    image_to_array,\n",
     "    get_stereo_groups,\n",
     ")\n",
     "\n",
+    "from benthoscan.backends.metashape.image import (\n",
+    "    ImagePairLoader, \n",
+    "    image_to_numpy, \n",
+    "    generate_image_loaders,\n",
+    ")\n",
+    "\n",
     "from benthoscan.geometry.stereo import (\n",
-    "    CameraCalibration,\n",
     "    StereoCalibration,\n",
-    "    RectifyingHomography,\n",
-    "    RectifyingPixelMap,\n",
-    "    compute_rectifying_homographies,\n",
-    "    compute_rectifying_pixel_maps,\n",
+    "    RectificationResult,\n",
+    "    compute_stereo_rectification,\n",
     "    rectify_image_pair,\n",
     ")\n",
     "\n",
     "\n",
-    "def disparity_to_range(disparity_map: np.ndarray, focal_length: float, baseline: float) -> np.ndarray:\n",
-    "    \"\"\"Converts disparity to range.\"\"\"\n",
-    "    INVALID_RANGE: float = 0.0\n",
-    "    \n",
-    "    inverse_disparity: np.ndarray = 1.0 / disparity_map\n",
-    "    \n",
-    "    range_map: np.ndarray = inverse_disparity * focal_length * baseline\n",
-    "    range_map: np.ndarray = np.where(range_map < 0.0, INVALID_RANGE, range_map)\n",
-    "\n",
-    "    return range_map\n",
-    "    \n",
-    "\n",
-    "def process_stereo_images(chunk: Metashape.Chunk, sensors: SensorPair, camera_pairs: list[CameraPair]):\n",
-    "    \"\"\"Get the stereo images\"\"\"\n",
-    "\n",
-    "    # Convert a pair of Metashape sensors to a stereo calibration\n",
-    "    calibration: StereoCalibration = compute_stereo_calibration(sensors)\n",
-    "\n",
-    "    focal_length: float = calibration.master.focal_length\n",
-    "    baseline: float = calibration.baseline\n",
-    "\n",
-    "    logger.info(focal_length)\n",
-    "    logger.info(baseline)\n",
-    "\n",
-    "    # Estimate homographies and pixel maps\n",
-    "    homographies: RectifyingHomography = compute_rectifying_homographies(calibration)\n",
-    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(calibration, homographies)\n",
-    "    \n",
-    "    for index, camera_pair in enumerate(camera_pairs):\n",
-    "\n",
-    "        logger.info(f\"Camera: {camera_pair.master.label}\")\n",
-    "\n",
-    "        master_image: np.ndarray = np.squeeze(image_to_array(camera_pair.master.image()))\n",
-    "        slave_image: np.ndarray = np.squeeze(image_to_array(camera_pair.slave.image()))\n",
-    "\n",
-    "        # Convert RGB to grayscale\n",
-    "        master_image: np.ndarray = cv2.cvtColor(master_image, cv2.COLOR_RGB2GRAY)\n",
-    "        \n",
-    "        rectified_master, rectified_slave = rectify_image_pair(\n",
-    "            master_image, \n",
-    "            slave_image, \n",
-    "            pixel_maps,\n",
-    "        )\n",
-    "        \n",
-    "        disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=False)\n",
-    "        smooth_disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=True)\n",
-    "\n",
-    "        # Convert disparity to range estimates\n",
-    "        range_map: np.ndarray = disparity_to_range(disparity_maps[0], 1720.0, baseline)\n",
-    "        smooth_range_map: np.ndarray = disparity_to_range(smooth_disparity_maps[0], 1720.0, baseline)\n",
-    "\n",
-    "        figures: dict = {\n",
-    "            \"image\": px.imshow(master_image, origin=\"upper\", color_continuous_scale=\"gray\"),\n",
-    "            \"range\": px.imshow(range_map, origin=\"upper\", zmin=2.0, zmax=2.7),\n",
-    "            \"smooth_range\": px.imshow(smooth_range_map, origin=\"upper\", zmin=2.0, zmax=2.7),\n",
-    "        }\n",
-    "\n",
-    "        for key, figure in figures.items():\n",
-    "            figure.show()\n",
-    "\n",
-    "        raise NotImplementedError(\"process_stereo_images is not implemented\")\n",
-    "\n",
-    "\n",
-    "def export_stereo_range_maps(chunk: Metashape.Chunk, directory: Path) -> None:\n",
+    "def generate_stereo_rectification(chunk: Metashape.Chunk) -> tuple[RectificationResult, list[ImagePairLoader]]:\n",
     "    \"\"\"Export range maps based on a stereo camera setup.\"\"\"\n",
     "\n",
     "    # Get pairs of sensors and cameras (master-slaves)\n",
     "    stereo_groups: list[StereoGroup] = get_stereo_groups(chunk)\n",
     "\n",
-    "    for group in stereo_groups:\n",
-    "        process_stereo_images(chunk, group.sensor_pair, group.camera_pairs)\n",
+    "    # NOTE: Process the first stereo group for now\n",
+    "    group: StereoGroup = stereo_groups[0]\n",
+    "\n",
+    "    # Compute the stereo calibration for the sensor pair\n",
+    "    calibration: StereoCalibration = compute_stereo_calibration(group.sensor_pair)\n",
+    "\n",
+    "    # Compute homographies, image transformations and camera matrices for stereo rectification\n",
+    "    rectification: RectificationResult = compute_stereo_rectification(calibration)\n",
     "    \n",
-    "    raise NotImplementedError"
+    "    # Set up image loaders for all camera pairs\n",
+    "    image_loaders: list[ImagePairLoader] = generate_image_loaders(group.camera_pairs)\n",
+    "\n",
+    "    return rectification, image_loaders"
    ]
   },
   {
@@ -273,6 +240,159 @@
    "metadata": {},
    "source": [
     "### Test stereo depth estimation on camera pairs from Metashape chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41df175b-f195-4479-bc25-21750488c109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections.abc import Callable\n",
+    "from functools import partial\n",
+    "from typing import NamedTuple\n",
+    "\n",
+    "import cv2\n",
+    "\n",
+    "from benthoscan.utils.log import logger\n",
+    "\n",
+    "\n",
+    "class WindowHandle(NamedTuple):\n",
+    "    \"\"\"Class representing a window handle.\"\"\"\n",
+    "    \n",
+    "    name: str\n",
+    "    width: int\n",
+    "    height: int\n",
+    "\n",
+    "\n",
+    "def on_parameter_change(value, name: str=\"\") -> None:\n",
+    "    \"\"\"TODO\"\"\"\n",
+    "    logger.info(f\"{name}: {value}\")\n",
+    "\n",
+    "\n",
+    "def initialize_stereo_tuner(window_name: str=\"Window\", width: int=800, height: int=1200) -> WindowHandle:\n",
+    "    \"\"\"TODO\"\"\"\n",
+    "    \n",
+    "    cv2.namedWindow(window_name, cv2.WINDOW_NORMAL)\n",
+    "    cv2.resizeWindow(window_name, width, height)\n",
+    "\n",
+    "    track_bars: list[tuple] = [\n",
+    "        ( \"minDisparity\", 0, 200 ),\n",
+    "        ( \"numDisparities\", 1, 50 ),\n",
+    "        ( \"blockSize\", 5, 50 ),\n",
+    "        ( \"preFilterType\", 1, 1 ),\n",
+    "        ( \"preFilterSize\", 2, 25 ),\n",
+    "        ( \"preFilterCap\", 5, 62 ), \n",
+    "        ( \"textureThreshold\", 10, 100 ), \n",
+    "        ( \"uniquenessRatio\", 15, 100 ), \n",
+    "        ( \"speckleRange\", 0, 100 ), \n",
+    "        ( \"speckleWindowSize\", 3, 25 ), \n",
+    "        ( \"disp12MaxDiff\", 0, 100 ), \n",
+    "    ]\n",
+    "\n",
+    "    for name, lower, upper in track_bars:\n",
+    "        cv2.createTrackbar(name, window_name, lower, upper, partial(on_parameter_change, name=name))\n",
+    "    \n",
+    "    return WindowHandle(name=window_name, width=width, height=height)\n",
+    "\n",
+    "\n",
+    "def get_tuner_parameters(handle: WindowHandle) -> dict:\n",
+    "    \"\"\"TODO\"\"\"\n",
+    "\n",
+    "    parameters: dict = {\n",
+    "        \"minDisparity\": cv2.getTrackbarPos(\"minDisparity\", handle.name),\n",
+    "        \"numDisparities\": cv2.getTrackbarPos(\"numDisparities\", handle.name),\n",
+    "        \"blockSize\": cv2.getTrackbarPos(\"blockSize\", handle.name),\n",
+    "        \"preFilterType\": cv2.getTrackbarPos(\"preFilterType\", handle.name),\n",
+    "        \"preFilterSize\": cv2.getTrackbarPos(\"preFilterSize\", handle.name),\n",
+    "        \"preFilterCap\": cv2.getTrackbarPos(\"preFilterCap\", handle.name),\n",
+    "        \"textureThreshold\": cv2.getTrackbarPos(\"textureThreshold\", handle.name),\n",
+    "        \"uniquenessRatio\": cv2.getTrackbarPos(\"uniquenessRatio\", handle.name),\n",
+    "        \"speckleRange\": cv2.getTrackbarPos(\"speckleRange\", handle.name),\n",
+    "        \"speckleWindowSize\": cv2.getTrackbarPos(\"speckleWindowSize\", handle.name),\n",
+    "        \"disp12MaxDiff\": cv2.getTrackbarPos(\"disp12MaxDiff\", handle.name),\n",
+    "        \"minDisparity\": cv2.getTrackbarPos(\"minDisparity\", handle.name),\n",
+    "    }\n",
+    "\n",
+    "    return parameters\n",
+    "\n",
+    "\n",
+    "def disparity_worker(\n",
+    "    image_pair: ImagePair, \n",
+    "    rectification: RectificationResult, \n",
+    "    parameters: dict,\n",
+    ") -> tuple[np.ndarray, np.ndarray]:\n",
+    "    \"\"\"TODO\"\"\"\n",
+    "    rectified_images: tuple = rectify_image_pair(\n",
+    "        image_pair.master.image, \n",
+    "        image_pair.slave.image, \n",
+    "        rectification,\n",
+    "    )\n",
+    "    disparity_maps: tuple = compute_disparity_sgbm(rectified_images[0], rectified_images[1], parameters)\n",
+    "    return disparity_maps\n",
+    "\n",
+    "\n",
+    "def visualize_stereo_results(rectification: RectificationResult, image_loaders: list[ImagePairLoader]) -> None:\n",
+    "    \"\"\"TODO\"\"\"\n",
+    "    \n",
+    "    handle: WindowHandle = initialize_stereo_tuner(window_name=\"test_window\", width=1600, height=900)\n",
+    "\n",
+    "    focal_length: float = rectification.master.calibration.focal_length\n",
+    "    baseline: float = np.linalg.norm(rectification.slave.location)\n",
+    "\n",
+    "    load_index: int = 0\n",
+    "    load_image: bool = True\n",
+    "\n",
+    "    # TODO: Initialize disparity estimator\n",
+    "    # \n",
+    "\n",
+    "    image_pair = None\n",
+    "    \n",
+    "    # While the window has not been closed\n",
+    "    while True:\n",
+    "\n",
+    "        if load_image:\n",
+    "            loader: ImagePairLoader = image_loaders[load_index]\n",
+    "            image_pair: ImagePair = loader()\n",
+    "            load_action: bool = False\n",
+    "        \n",
+    "        parameters: dict = get_tuner_parameters(handle)\n",
+    "\n",
+    "        if image_pair:\n",
+    "            disparity_maps: tuple = disparity_worker(image_pair, rectification, parameters)\n",
+    "\n",
+    "            range_maps: tuple = (\n",
+    "                disparity_to_range(disparity_maps[0], focal_length=focal_length, baseline=baseline),\n",
+    "                disparity_to_range(-disparity_maps[1], focal_length=focal_length, baseline=baseline),\n",
+    "            )\n",
+    "\n",
+    "            logger.info(range_maps[1])\n",
+    "\n",
+    "            MAX_RANGE, MIN_RANGE = 3.0, 0.0\n",
+    "            scaled: tuple = (\n",
+    "                np.uint8( 255 * (range_maps[0] - MIN_RANGE) / (MAX_RANGE - MIN_RANGE)),\n",
+    "                np.uint8( 255 * (-1.0 * range_maps[1] - MIN_RANGE) / (MAX_RANGE - MIN_RANGE)),\n",
+    "            )\n",
+    "\n",
+    "            merged: np.ndarray = np.hstack(( scaled[0], scaled[1] ))\n",
+    "            \n",
+    "            colored: np.ndarray = cv2.applyColorMap(merged, cv2.COLORMAP_AUTUMN);\n",
+    "            \n",
+    "            cv2.imshow(handle.name, colored)\n",
+    "        \n",
+    "        key: int = cv2.waitKey(100)\n",
+    "    \n",
+    "        match key:\n",
+    "            # Close window using esc key\n",
+    "            case 27:\n",
+    "                cv2.destroyWindow(handle.name)\n",
+    "                break\n",
+    "            case 32:\n",
+    "                load_image: bool = True\n",
+    "            # If no key is pressed, continue\n",
+    "            case -1:\n",
+    "                continue"
    ]
   },
   {
@@ -289,10 +409,16 @@
     "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01/stereo_range_maps\")\n",
     "\n",
+    "logger.info(ord('\\n'))\n",
+    "\n",
     "# Generate range maps based on stereo pairs\n",
     "for chunk in target_chunks:\n",
     "    output_directory: Path = output_root / Path(f\"{chunk.label}_range_maps\")\n",
-    "    export_stereo_range_maps(chunk, output_directory)"
+    "\n",
+    "    \n",
+    "    rectification, image_loaders = generate_stereo_rectification(chunk)\n",
+    "\n",
+    "    visualize_stereo_results(rectification, image_loaders)"
    ]
   }
  ],
