--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -53,12 +53,14 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "import imageio.v3 as iio\n",
+    "#import imageio.v3 as iio\n",
     "import Metashape\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
     "\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "from benthoscan.io import write_image\n",
     "\n",
     "from benthoscan.backends.metashape import (\n",
     "    render_range_and_normal_maps,\n",
@@ -82,8 +84,8 @@
     "        range_map: np.ndarray = range_map.astype(np.float16)\n",
     "        normal_map: np.ndarray = normal_map.astype(np.float16)\n",
     "\n",
-    "        iio.imwrite(range_directory / f\"{camera.label}.tiff\", range_map)\n",
-    "        iio.imwrite(normal_directory / f\"{camera.label}.tiff\", normal_map)"
+    "        write_image(range_directory / f\"{camera.label}.tiff\", range_map)\n",
+    "        write_image(normal_directory / f\"{camera.label}.tiff\", normal_map)"
    ]
   },
   {
