Lint code with ruff and fix errors.

--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from benthoscan.io as io\n",
+    "import benthoscan.io as io\n",
     "\n",
     "from benthoscan.backends.metashape import (\n",
     "    render_range_and_normal_maps,\n",
