Implement disparity estimation with a Hitnet model. Add notebook with functionality to export range and normal maps.

--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -2,22 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3413621b-2dfc-4485-9d30-20f34fbcb460",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -32,39 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6754d033-a29b-4908-93b1-5f13333433c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LoadProject: path = /data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-08-15 13:38:27.745\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mloaded document /data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz successfully\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded project in 26.6141 sec\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-08-15 13:38:27.746\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbenthoscan.backends.metashape.context\u001b[0m:\u001b[36mlog_internal_data\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1m{'document': <Document '/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz'>}\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "PATHS: dict[str, Path] = {\n",
     "    \"DOCUMENT_IN\": Path(\n",
@@ -88,6 +49,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6dc0610-10e1-40a4-8982-0a645d3b383b",
+   "metadata": {},
+   "source": [
+    "### Backend playground"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf46c5d-d6c6-426c-a028-b5d2d7e560a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
+    "\n",
+    "chunk: Metashape.Chunk = document.chunks[0]\n",
+    "valid_cameras: list[Metashape.Camera] = [camera for camera in chunk.cameras if camera.transform]\n",
+    "\n",
+    "camera: Metashape.Camera = valid_cameras[0]\n",
+    "\n",
+    "logger.info(chunk)\n",
+    "logger.info(camera)\n",
+    "logger.info(camera.sensor)\n",
+    "logger.info(chunk.model)\n",
+    "\n",
+    "range_map: Metashape.Image = camera.chunk.model.renderDepth(camera.transform, camera.sensor.calibration, add_alpha=False)\n",
+    "normal_map: Metashape.Image = camera.chunk.model.renderNormalMap(camera.transform, camera.sensor.calibration, add_alpha=False)\n",
+    "\n",
+    "for image in [range_map, normal_map]:\n",
+    "    logger.info(f\"Channels:      {image.channels}\")\n",
+    "    logger.info(f\"Channel count: {image.cn}\")\n",
+    "    logger.info(f\"Data type:     {image.data_type}\")\n",
+    "    logger.info(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edf5b22f-436f-48ad-92ea-0cd7761d0da7",
    "metadata": {},
    "source": [
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c4d49f1f-4a5f-4ce0-bc6c-f137d0f71ee3",
    "metadata": {},
    "outputs": [],
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f0755b9b-6c17-4266-961c-e7745e3a536c",
    "metadata": {},
    "outputs": [],
