--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -65,8 +65,6 @@
     "    render_range_and_normal_maps,\n",
     "    compute_camera_calibration,\n",
     ")\n",
-    "from benthoscan.geometry.range_maps import compute_normals_from_range\n",
-    "\n",
     "\n",
     "def export_rendered_range(chunk: Metashape.Chunk, range_directory: Path, normal_directory: Path) -> None:\n",
     "    \"\"\"Export range maps rendered from a Metashape mesh.\"\"\"\n",
@@ -78,13 +76,14 @@
     "    \n",
     "    for camera in tqdm(valid_cameras, desc=\"Exporting rendered range maps...\"):\n",
     "        \n",
-    "        range_map, normal_map = render_range_and_normal_maps(camera)\n",
-    "\n",
-    "        range_map: np.ndarray = range_map.astype(np.float16)\n",
-    "        normal_map: np.ndarray = normal_map.astype(np.float16)\n",
-    "\n",
-    "        io.write_image(range_directory / f\"{camera.label}.tiff\", range_map)\n",
-    "        io.write_image(normal_directory / f\"{camera.label}.tiff\", normal_map)"
+    "        geometry: tuple[Image, Image] = render_range_and_normal_maps(camera)\n",
+    "        range_map, normal_map = geometry\n",
+    "        \n",
+    "        range_map.data: np.ndarray = range_map.data.astype(np.float16)\n",
+    "        normal_map.data: np.ndarray = normal_map.data.astype(np.float16)\n",
+    "        \n",
+    "        io.write_image(range_directory / f\"{camera.label}.tiff\", range_map.to_array())\n",
+    "        io.write_image(normal_directory / f\"{camera.label}.tiff\", normal_map.to_array())"
    ]
   },
   {
