--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -60,31 +60,36 @@
     "\n",
     "from tqdm import tqdm\n",
     "\n",
+    "\n",
     "def export_rendered_range(chunk: Metashape.Chunk, directory: Path) -> None:\n",
     "    \"\"\"Export range maps rendered from a Metashape mesh.\"\"\"\n",
-    "    \n",
+    "\n",
     "    if chunk.transform.scale is None:\n",
     "        scale: float = 1.0\n",
     "    else:\n",
-    "    \tscale: float = chunk.transform.scale\n",
+    "        scale: float = chunk.transform.scale\n",
     "\n",
     "    logger.info(f\"chunk scale: {scale}\")\n",
-    "    \n",
+    "\n",
     "    for camera in tqdm(chunk.cameras, desc=\"Exporting rendered range maps...\"):\n",
     "        if not camera.transform:\n",
     "            continue\n",
     "\n",
     "        output_path: Path = directory / f\"{camera.label}.tiff\"\n",
-    "        \n",
-    "        range_map: Metashape.Image = chunk.model.renderDepth(camera.transform, camera.sensor.calibration, add_alpha=False)\n",
+    "\n",
+    "        range_map: Metashape.Image = chunk.model.renderDepth(\n",
+    "            camera.transform, camera.sensor.calibration, add_alpha=False\n",
+    "        )\n",
     "        range_map: Metashape.Image = range_map * scale\n",
-    "        range_map: Metashape.Image = range_map.convert(\" \",\"F32\")\n",
+    "        range_map: Metashape.Image = range_map.convert(\" \", \"F32\")\n",
     "\n",
     "        save_range_map: bool = False\n",
     "        if save_range_map:\n",
     "            compression = Metashape.ImageCompression()\n",
-    "            compression.tiff_compression = Metashape.ImageCompression().TiffCompressionDeflate\n",
-    "            \n",
+    "            compression.tiff_compression = (\n",
+    "                Metashape.ImageCompression().TiffCompressionDeflate\n",
+    "            )\n",
+    "\n",
     "            range_map.save(str(output_path), compression=compression)"
    ]
   },
@@ -105,8 +110,10 @@
    "source": [
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
-    "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
-    "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
+    "target_labels: list[str] = [\"r23685bc_20100605_021022\"]\n",
+    "target_chunks: list[Metashape.Chunk] = [\n",
+    "    chunk for chunk in document.chunks if chunk.label in target_labels\n",
+    "]\n",
     "\n",
     "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01/rendered_range_maps\")\n",
