--- a/notebooks/range_map_visualization.ipynb
+++ b/notebooks/range_map_visualization.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "\n",
     "paths = {\n",
-    "    \"rendered_range\" : Path(\"/data/kingston_snv_01/rendered_range_maps/r23685bc_20100605_021022/PR_20100605_032556_727_LC16.tiff\"),\n",
+    "    \"rendered_range\": Path(\n",
+    "        \"/data/kingston_snv_01/rendered_range_maps/r23685bc_20100605_021022/PR_20100605_032556_727_LC16.tiff\"\n",
+    "    ),\n",
     "}\n",
     "\n",
     "image: np.ndarray = cv2.imread(paths.get(\"rendered_range\"), cv2.IMREAD_UNCHANGED)\n",
