--- a/notebooks/export_stereo_range_maps.ipynb
+++ b/notebooks/export_stereo_range_maps.ipynb
@@ -65,14 +65,15 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def sgbm_default_parameters() -> dict:\n",
     "    \"\"\"\n",
     "    Returns default parameters for semi-global block matching.\n",
     "    Adopted from: https://github.com/eborboihuc/stereo-matching/blob/master/sgbm.py\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    min_disparity: int = 0\n",
-    "    num_disparities: int = 6 * 16 # NOTE: 112\n",
+    "    num_disparities: int = 6 * 16  # NOTE: 112\n",
     "    block_size: int = 5\n",
     "    window_size: int = 3\n",
     "    disp12_max_diff: int = 1\n",
@@ -81,9 +82,9 @@
     "    speckle_range: int = 1\n",
     "    pre_filter_cap: int = 63\n",
     "    mode: object = cv2.STEREO_SGBM_MODE_SGBM_3WAY\n",
-    "    \n",
-    "    p1: int = 8 * 1 * block_size**2 # **2 # Smoothness\n",
-    "    p2: int = 32 * 1 * block_size**2 # **2 # Smoothness - \n",
+    "\n",
+    "    p1: int = 8 * 1 * block_size**2  # **2 # Smoothness\n",
+    "    p2: int = 32 * 1 * block_size**2  # **2 # Smoothness -\n",
     "\n",
     "    return {\n",
     "        \"minDisparity\": min_disparity,\n",
@@ -96,36 +97,39 @@
     "        \"speckleWindowSize\": speckle_window_size,\n",
     "        \"speckleRange\": speckle_range,\n",
     "        \"preFilterCap\": pre_filter_cap,\n",
-    "        \"mode\": mode\n",
+    "        \"mode\": mode,\n",
     "    }\n",
     "\n",
+    "\n",
     "def filter_disparity(\n",
-    "    estimator: object, \n",
-    "    image_left: np.ndarray, \n",
-    "    disparity_left: np.ndarray, \n",
-    "    disparity_right: np.ndarray\n",
+    "    estimator: object,\n",
+    "    image_left: np.ndarray,\n",
+    "    disparity_left: np.ndarray,\n",
+    "    disparity_right: np.ndarray,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"Filter disparity map based on WLS. Returns the disparity map as 16-bit pixels.\"\"\"\n",
-    "    \n",
+    "\n",
     "    filtered_disparity_left = estimator.filter(\n",
-    "        disparity_left, \n",
-    "        image_left, \n",
-    "        None, \n",
+    "        disparity_left,\n",
+    "        image_left,\n",
+    "        None,\n",
     "        disparity_right,\n",
     "    )\n",
-    "    \n",
-    "    return filtered_disparity_left\n",
-    "    \n",
     "\n",
-    "def compute_disparity_sgbm(image_left: np.ndarray, image_right: np.ndarray, smooth: bool=False):\n",
+    "    return filtered_disparity_left\n",
+    "\n",
+    "\n",
+    "def compute_disparity_sgbm(\n",
+    "    image_left: np.ndarray, image_right: np.ndarray, smooth: bool = False\n",
+    "):\n",
     "    \"\"\"Computes the disparity for an image pair using OpenCVs SGBM algorithm.\"\"\"\n",
-    "    \n",
+    "\n",
     "    parameters: dict = sgbm_default_parameters()\n",
-    "    \n",
+    "\n",
     "    left_matcher = cv2.StereoSGBM_create(**parameters)\n",
     "    right_matcher = cv2.ximgproc.createRightMatcher(left_matcher)\n",
     "\n",
-    "    # Disparity is represented with 16-bit integers. To convert to pixel value cast to float \n",
+    "    # Disparity is represented with 16-bit integers. To convert to pixel value cast to float\n",
     "    # and divide by 16, i.e.:  disparity.astype(np.float32) / 16.0\n",
     "    disparity_left: np.ndarray = left_matcher.compute(image_left, image_right)\n",
     "    disparity_right: np.ndarray = right_matcher.compute(image_right, image_left)\n",
@@ -135,15 +139,21 @@
     "\n",
     "    if smooth:\n",
     "        # FILTER Parameters\n",
-    "        lmbda: int = 100 # regularization parameter 500\n",
+    "        lmbda: int = 100  # regularization parameter 500\n",
     "        sigma: float = 0.2\n",
-    "    \n",
-    "        disparity_filter = cv2.ximgproc.createDisparityWLSFilter(matcher_left=left_matcher)\n",
+    "\n",
+    "        disparity_filter = cv2.ximgproc.createDisparityWLSFilter(\n",
+    "            matcher_left=left_matcher\n",
+    "        )\n",
     "        disparity_filter.setLambda(lmbda)\n",
     "        disparity_filter.setSigmaColor(sigma)\n",
-    "    \n",
-    "        disparity_left: np.ndarray = filter_disparity(disparity_filter, image_left, disparity_left, disparity_right)\n",
-    "        disparity_right: np.ndarray = filter_disparity(disparity_filter, image_right, disparity_right, disparity_left)\n",
+    "\n",
+    "        disparity_left: np.ndarray = filter_disparity(\n",
+    "            disparity_filter, image_left, disparity_left, disparity_right\n",
+    "        )\n",
+    "        disparity_right: np.ndarray = filter_disparity(\n",
+    "            disparity_filter, image_right, disparity_right, disparity_left\n",
+    "        )\n",
     "\n",
     "    assert disparity_left.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
     "    assert disparity_right.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
@@ -168,60 +178,68 @@
    "source": [
     "def compute_q_matrix(baseline, K1, K2) -> np.ndarray:\n",
     "    \"\"\" \"\"\"\n",
-    "    b   = baseline\n",
-    "    fx  = K1[0,0]\n",
-    "    fy  = K2[1,1]\n",
-    "    cx1 = K1[0,2]\n",
-    "    cx2 = K2[0,2]\n",
-    "    a1  = K1[0,1]\n",
-    "    a2  = K2[0,1]\n",
-    "    cy  = K1[1,2]\n",
-    "    \n",
+    "    b = baseline\n",
+    "    fx = K1[0, 0]\n",
+    "    fy = K2[1, 1]\n",
+    "    cx1 = K1[0, 2]\n",
+    "    cx2 = K2[0, 2]\n",
+    "    a1 = K1[0, 1]\n",
+    "    a2 = K2[0, 1]\n",
+    "    cy = K1[1, 2]\n",
+    "\n",
     "    Q = np.eye(4, dtype=np.float64)\n",
-    "    \n",
-    "    Q[0,1] = -a1/fy\n",
-    "    Q[0,3] = a1*cy/fy - cx1\n",
-    "    \n",
-    "    Q[1,1] = fx/fy\n",
-    "    Q[1,3] = -cy*fx/fy\n",
-    "                             \n",
-    "    Q[2,2] = 0\n",
-    "    Q[2,3] = -fx\n",
-    "    \n",
-    "    Q[3,1] = (a2-a1)/(fy*b)\n",
-    "    Q[3,2] = 1/b                        \n",
-    "    Q[3,3] = ((a1-a2)*cy+(cx2-cx1)*fy)/(fy*b)\n",
-    "    \n",
+    "\n",
+    "    Q[0, 1] = -a1 / fy\n",
+    "    Q[0, 3] = a1 * cy / fy - cx1\n",
+    "\n",
+    "    Q[1, 1] = fx / fy\n",
+    "    Q[1, 3] = -cy * fx / fy\n",
+    "\n",
+    "    Q[2, 2] = 0\n",
+    "    Q[2, 3] = -fx\n",
+    "\n",
+    "    Q[3, 1] = (a2 - a1) / (fy * b)\n",
+    "    Q[3, 2] = 1 / b\n",
+    "    Q[3, 3] = ((a1 - a2) * cy + (cx2 - cx1) * fy) / (fy * b)\n",
+    "\n",
     "    return Q\n",
     "\n",
     "\n",
-    "def debug_stereo(calibration: StereoCalibration, homographies: RectifyingHomography, pixel_maps: RectifyingPixelMap) -> None:\n",
-    "    \"\"\"Debug stereo transformations. Based on \"\"\"\n",
-    "        # Homogeneous transformations\n",
-    "    T1 = np.hstack( (np.eye(3), np.zeros((3, 1))) ) # Camera one has identity rotation and zero translation\n",
-    "    T2 = np.hstack( (calibration.extrinsics.rotation, calibration.extrinsics.location.reshape(3,1)) )\n",
-    "    \n",
+    "def debug_stereo(\n",
+    "    calibration: StereoCalibration,\n",
+    "    homographies: RectifyingHomography,\n",
+    "    pixel_maps: RectifyingPixelMap,\n",
+    ") -> None:\n",
+    "    \"\"\"Debug stereo transformations. Based on\"\"\"\n",
+    "    # Homogeneous transformations\n",
+    "    T1 = np.hstack(\n",
+    "        (np.eye(3), np.zeros((3, 1)))\n",
+    "    )  # Camera one has identity rotation and zero translation\n",
+    "    T2 = np.hstack(\n",
+    "        (calibration.extrinsics.rotation, calibration.extrinsics.location.reshape(3, 1))\n",
+    "    )\n",
+    "\n",
     "    # Original projection matrices\n",
     "    Po1 = calibration.master.projection.dot(T1)\n",
     "    Po2 = calibration.slave.projection.dot(T2)\n",
     "\n",
     "    # Camera centers and baseline\n",
     "    C1 = np.zeros(3)\n",
-    "    C2 = -np.linalg.inv(Po2[:, :3]).dot(Po2[:,3])\n",
+    "    C2 = -np.linalg.inv(Po2[:, :3]).dot(Po2[:, 3])\n",
     "    B = np.linalg.norm(C2)\n",
     "\n",
     "    Rcommon = homographies.rotation\n",
-    "    \n",
+    "\n",
     "    # Rectified camera matrices\n",
     "    K1 = pixel_maps.master.projection\n",
     "    K2 = pixel_maps.slave.projection\n",
-    "    \n",
+    "\n",
     "    # Rectified projections\n",
     "    P1 = K1.dot(Rcommon).dot(np.hstack((np.eye(3), -C1[:, None])))\n",
     "    P2 = K2.dot(Rcommon).dot(np.hstack((np.eye(3), -C2[:, None])))\n",
     "\n",
     "    Q: np.ndarray = compute_q_matrix(B, K1, K2)\n",
-    "    \n",
+    "\n",
     "    logger.info(\"---------- Projections ----------\")\n",
     "    logger.info(f\"Po1: {Po1}\")\n",
     "    logger.info(f\"Po2: {Po2}\")\n",
@@ -232,7 +250,7 @@
     "    logger.info(f\"C2: {C2}\")\n",
     "    logger.info(f\"B: {B}\")\n",
     "    logger.info(\"------------------------------------\")\n",
-    "    \n",
+    "\n",
     "    logger.info(\"---------- Projections ----------\")\n",
     "    logger.info(f\"P1: {P1}\")\n",
     "    logger.info(f\"P2: {P2}\")\n",
@@ -262,7 +280,7 @@
     "import plotly.graph_objects as go\n",
     "\n",
     "from benthoscan.backends.metashape.camera_helpers import (\n",
-    "    SensorPair, \n",
+    "    SensorPair,\n",
     "    CameraPair,\n",
     "    StereoGroup,\n",
     "    compute_camera_calibration,\n",
@@ -282,12 +300,14 @@
     ")\n",
     "\n",
     "\n",
-    "def disparity_to_range(disparity_map: np.ndarray, focal_length: float, baseline: float) -> np.ndarray:\n",
+    "def disparity_to_range(\n",
+    "    disparity_map: np.ndarray, focal_length: float, baseline: float\n",
+    ") -> np.ndarray:\n",
     "    \"\"\"Converts disparity to range.\"\"\"\n",
     "    INVALID_RANGE: float = 0.0\n",
-    "    \n",
+    "\n",
     "    inverse_disparity: np.ndarray = 1.0 / disparity_map\n",
-    "    \n",
+    "\n",
     "    range_map: np.ndarray = inverse_disparity * focal_length * baseline\n",
     "    range_map: np.ndarray = np.where(range_map < 0.0, INVALID_RANGE, range_map)\n",
     "\n",
@@ -295,12 +315,10 @@
     "\n",
     "\n",
     "def metashape_stereo_processing(\n",
-    "    chunk: Metashape.Chunk, \n",
-    "    sensor_pair: SensorPair, \n",
-    "    camera_pairs: list[CameraPair]\n",
+    "    chunk: Metashape.Chunk, sensor_pair: SensorPair, camera_pairs: list[CameraPair]\n",
     ") -> None:\n",
     "    \"\"\"Process the stereo images in a Metashape chunk.\"\"\"\n",
-    "    \n",
+    "\n",
     "    # Convert a pair of Metashape sensors to a stereo calibration\n",
     "    calibration: StereoCalibration = compute_stereo_calibration(sensor_pair)\n",
     "\n",
@@ -308,17 +326,21 @@
     "    homographies: RectifyingHomography = compute_rectifying_homographies(calibration)\n",
     "\n",
     "    # Estimate transformations that rectify the image pixels\n",
-    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(calibration, homographies)\n",
-    "        \n",
+    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(\n",
+    "        calibration, homographies\n",
+    "    )\n",
+    "\n",
     "    for camera_pair in camera_pairs:\n",
     "\n",
     "        # Convert Metashape images to Numpy arrays\n",
-    "        master_image: np.ndarray = np.squeeze(image_to_array(camera_pair.master.image()))\n",
+    "        master_image: np.ndarray = np.squeeze(\n",
+    "            image_to_array(camera_pair.master.image())\n",
+    "        )\n",
     "        slave_image: np.ndarray = np.squeeze(image_to_array(camera_pair.slave.image()))\n",
     "\n",
     "        # Convert RGB to grayscale\n",
     "        master_image: np.ndarray = cv2.cvtColor(master_image, cv2.COLOR_RGB2GRAY)\n",
-    "        \n",
+    "\n",
     "        process_stereo_images(\n",
     "            calibration=calibration,\n",
     "            homographies=homographies,\n",
@@ -326,13 +348,13 @@
     "            master_image=master_image,\n",
     "            slave_image=slave_image,\n",
     "        )\n",
-    "    \n",
+    "\n",
     "\n",
     "def process_stereo_images(\n",
     "    calibration: StereoCalibration,\n",
     "    homographies: RectifyingHomography,\n",
     "    pixel_maps: RectifyingPixelMap,\n",
-    "    master_image: np.ndarray, \n",
+    "    master_image: np.ndarray,\n",
     "    slave_image: np.ndarray,\n",
     ") -> None:\n",
     "    \"\"\"Get the stereo images\"\"\"\n",
@@ -348,8 +370,10 @@
     "    )\n",
     "\n",
     "    # Compute disparity maps with semi-global block matching\n",
-    "    disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=False)\n",
-    "        \n",
+    "    disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(\n",
+    "        rectified_master, rectified_slave, smooth=False\n",
+    "    )\n",
+    "\n",
     "    # Convert disparity to range estimates\n",
     "    range_map: np.ndarray = disparity_to_range(disparity_maps[0], 1839.0, baseline)\n",
     "\n",
@@ -373,7 +397,7 @@
     "\n",
     "    for group in stereo_groups:\n",
     "        metashape_stereo_processing(chunk, group.sensor_pair, group.camera_pairs)\n",
-    "    \n",
+    "\n",
     "    raise NotImplementedError"
    ]
   },
@@ -394,8 +418,10 @@
    "source": [
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
-    "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
-    "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
+    "target_labels: list[str] = [\"r23685bc_20100605_021022\"]\n",
+    "target_chunks: list[Metashape.Chunk] = [\n",
+    "    chunk for chunk in document.chunks if chunk.label in target_labels\n",
+    "]\n",
     "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01/stereo_range_maps\")\n",
     "\n",
