--- a/notebooks/stereo_disparity_hitnet.ipynb
+++ b/notebooks/stereo_disparity_hitnet.ipynb
@@ -65,14 +65,15 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def sgbm_default_parameters() -> dict:\n",
     "    \"\"\"\n",
     "    Returns default parameters for semi-global block matching.\n",
     "    Adopted from: https://github.com/eborboihuc/stereo-matching/blob/master/sgbm.py\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    min_disparity: int = 0\n",
-    "    num_disparities: int = 7 * 16 # NOTE: 112\n",
+    "    num_disparities: int = 7 * 16  # NOTE: 112\n",
     "    block_size: int = 5\n",
     "    window_size: int = 3\n",
     "    disp12_max_diff: int = 1\n",
@@ -81,9 +82,9 @@
     "    speckle_range: int = 1\n",
     "    pre_filter_cap: int = 63\n",
     "    mode: object = cv2.STEREO_SGBM_MODE_SGBM_3WAY\n",
-    "    \n",
-    "    p1: int = 8 * 1 * block_size**2 # **2 # Smoothness\n",
-    "    p2: int = 32 * 1 * block_size**2 # **2 # Smoothness - \n",
+    "\n",
+    "    p1: int = 8 * 1 * block_size**2  # **2 # Smoothness\n",
+    "    p2: int = 32 * 1 * block_size**2  # **2 # Smoothness -\n",
     "\n",
     "    return {\n",
     "        \"minDisparity\": min_disparity,\n",
@@ -96,36 +97,39 @@
     "        \"speckleWindowSize\": speckle_window_size,\n",
     "        \"speckleRange\": speckle_range,\n",
     "        \"preFilterCap\": pre_filter_cap,\n",
-    "        \"mode\": mode\n",
+    "        \"mode\": mode,\n",
     "    }\n",
     "\n",
+    "\n",
     "def filter_disparity(\n",
-    "    estimator: object, \n",
-    "    image_left: np.ndarray, \n",
-    "    disparity_left: np.ndarray, \n",
-    "    disparity_right: np.ndarray\n",
+    "    estimator: object,\n",
+    "    image_left: np.ndarray,\n",
+    "    disparity_left: np.ndarray,\n",
+    "    disparity_right: np.ndarray,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"Filter disparity map based on WLS. Returns the disparity map as 16-bit pixels.\"\"\"\n",
-    "    \n",
+    "\n",
     "    filtered_disparity_left = estimator.filter(\n",
-    "        disparity_left, \n",
-    "        image_left, \n",
-    "        None, \n",
+    "        disparity_left,\n",
+    "        image_left,\n",
+    "        None,\n",
     "        disparity_right,\n",
     "    )\n",
-    "    \n",
-    "    return filtered_disparity_left\n",
-    "    \n",
     "\n",
-    "def compute_disparity_sgbm(image_left: np.ndarray, image_right: np.ndarray, smooth: bool=False):\n",
+    "    return filtered_disparity_left\n",
+    "\n",
+    "\n",
+    "def compute_disparity_sgbm(\n",
+    "    image_left: np.ndarray, image_right: np.ndarray, smooth: bool = False\n",
+    "):\n",
     "    \"\"\"Computes the disparity for an image pair using OpenCVs SGBM algorithm.\"\"\"\n",
-    "    \n",
+    "\n",
     "    parameters: dict = sgbm_default_parameters()\n",
-    "    \n",
+    "\n",
     "    left_matcher = cv2.StereoSGBM_create(**parameters)\n",
     "    right_matcher = cv2.ximgproc.createRightMatcher(left_matcher)\n",
     "\n",
-    "    # Disparity is represented with 16-bit integers. To convert to pixel value cast to float \n",
+    "    # Disparity is represented with 16-bit integers. To convert to pixel value cast to float\n",
     "    # and divide by 16, i.e.:  disparity.astype(np.float32) / 16.0\n",
     "    disparity_left: np.ndarray = left_matcher.compute(image_left, image_right)\n",
     "    disparity_right: np.ndarray = right_matcher.compute(image_right, image_left)\n",
@@ -135,15 +139,21 @@
     "\n",
     "    if smooth:\n",
     "        # FILTER Parameters\n",
-    "        lmbda: int = 100 # regularization parameter 500\n",
+    "        lmbda: int = 100  # regularization parameter 500\n",
     "        sigma: float = 0.2\n",
-    "    \n",
-    "        disparity_filter = cv2.ximgproc.createDisparityWLSFilter(matcher_left=left_matcher)\n",
+    "\n",
+    "        disparity_filter = cv2.ximgproc.createDisparityWLSFilter(\n",
+    "            matcher_left=left_matcher\n",
+    "        )\n",
     "        disparity_filter.setLambda(lmbda)\n",
     "        disparity_filter.setSigmaColor(sigma)\n",
-    "    \n",
-    "        disparity_left: np.ndarray = filter_disparity(disparity_filter, image_left, disparity_left, disparity_right)\n",
-    "        disparity_right: np.ndarray = filter_disparity(disparity_filter, image_right, disparity_right, disparity_left)\n",
+    "\n",
+    "        disparity_left: np.ndarray = filter_disparity(\n",
+    "            disparity_filter, image_left, disparity_left, disparity_right\n",
+    "        )\n",
+    "        disparity_right: np.ndarray = filter_disparity(\n",
+    "            disparity_filter, image_right, disparity_right, disparity_left\n",
+    "        )\n",
     "\n",
     "    assert disparity_left.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
     "    assert disparity_right.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
@@ -172,7 +182,7 @@
     "import plotly.graph_objects as go\n",
     "\n",
     "from benthoscan.backends.metashape.camera_helpers import (\n",
-    "    SensorPair, \n",
+    "    SensorPair,\n",
     "    CameraPair,\n",
     "    StereoGroup,\n",
     "    compute_camera_calibration,\n",
@@ -192,19 +202,23 @@
     ")\n",
     "\n",
     "\n",
-    "def disparity_to_range(disparity_map: np.ndarray, focal_length: float, baseline: float) -> np.ndarray:\n",
+    "def disparity_to_range(\n",
+    "    disparity_map: np.ndarray, focal_length: float, baseline: float\n",
+    ") -> np.ndarray:\n",
     "    \"\"\"Converts disparity to range.\"\"\"\n",
     "    INVALID_RANGE: float = 0.0\n",
-    "    \n",
+    "\n",
     "    inverse_disparity: np.ndarray = 1.0 / disparity_map\n",
-    "    \n",
+    "\n",
     "    range_map: np.ndarray = inverse_disparity * focal_length * baseline\n",
     "    range_map: np.ndarray = np.where(range_map < 0.0, INVALID_RANGE, range_map)\n",
     "\n",
     "    return range_map\n",
-    "    \n",
     "\n",
-    "def process_stereo_images(chunk: Metashape.Chunk, sensors: SensorPair, camera_pairs: list[CameraPair]):\n",
+    "\n",
+    "def process_stereo_images(\n",
+    "    chunk: Metashape.Chunk, sensors: SensorPair, camera_pairs: list[CameraPair]\n",
+    "):\n",
     "    \"\"\"Get the stereo images\"\"\"\n",
     "\n",
     "    # Convert a pair of Metashape sensors to a stereo calibration\n",
@@ -218,35 +232,49 @@
     "\n",
     "    # Estimate homographies and pixel maps\n",
     "    homographies: RectifyingHomography = compute_rectifying_homographies(calibration)\n",
-    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(calibration, homographies)\n",
-    "    \n",
+    "    pixel_maps: RectifyingPixelMap = compute_rectifying_pixel_maps(\n",
+    "        calibration, homographies\n",
+    "    )\n",
+    "\n",
     "    for index, camera_pair in enumerate(camera_pairs):\n",
     "\n",
     "        logger.info(f\"Camera: {camera_pair.master.label}\")\n",
     "\n",
-    "        master_image: np.ndarray = np.squeeze(image_to_array(camera_pair.master.image()))\n",
+    "        master_image: np.ndarray = np.squeeze(\n",
+    "            image_to_array(camera_pair.master.image())\n",
+    "        )\n",
     "        slave_image: np.ndarray = np.squeeze(image_to_array(camera_pair.slave.image()))\n",
     "\n",
     "        # Convert RGB to grayscale\n",
     "        master_image: np.ndarray = cv2.cvtColor(master_image, cv2.COLOR_RGB2GRAY)\n",
-    "        \n",
+    "\n",
     "        rectified_master, rectified_slave = rectify_image_pair(\n",
-    "            master_image, \n",
-    "            slave_image, \n",
+    "            master_image,\n",
+    "            slave_image,\n",
     "            pixel_maps,\n",
     "        )\n",
-    "        \n",
-    "        disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=False)\n",
-    "        smooth_disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(rectified_master, rectified_slave, smooth=True)\n",
+    "\n",
+    "        disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(\n",
+    "            rectified_master, rectified_slave, smooth=False\n",
+    "        )\n",
+    "        smooth_disparity_maps: tuple[np.ndarray, np.ndarray] = compute_disparity_sgbm(\n",
+    "            rectified_master, rectified_slave, smooth=True\n",
+    "        )\n",
     "\n",
     "        # Convert disparity to range estimates\n",
     "        range_map: np.ndarray = disparity_to_range(disparity_maps[0], 1720.0, baseline)\n",
-    "        smooth_range_map: np.ndarray = disparity_to_range(smooth_disparity_maps[0], 1720.0, baseline)\n",
+    "        smooth_range_map: np.ndarray = disparity_to_range(\n",
+    "            smooth_disparity_maps[0], 1720.0, baseline\n",
+    "        )\n",
     "\n",
     "        figures: dict = {\n",
-    "            \"image\": px.imshow(master_image, origin=\"upper\", color_continuous_scale=\"gray\"),\n",
+    "            \"image\": px.imshow(\n",
+    "                master_image, origin=\"upper\", color_continuous_scale=\"gray\"\n",
+    "            ),\n",
     "            \"range\": px.imshow(range_map, origin=\"upper\", zmin=2.0, zmax=2.7),\n",
-    "            \"smooth_range\": px.imshow(smooth_range_map, origin=\"upper\", zmin=2.0, zmax=2.7),\n",
+    "            \"smooth_range\": px.imshow(\n",
+    "                smooth_range_map, origin=\"upper\", zmin=2.0, zmax=2.7\n",
+    "            ),\n",
     "        }\n",
     "\n",
     "        for key, figure in figures.items():\n",
@@ -263,7 +291,7 @@
     "\n",
     "    for group in stereo_groups:\n",
     "        process_stereo_images(chunk, group.sensor_pair, group.camera_pairs)\n",
-    "    \n",
+    "\n",
     "    raise NotImplementedError"
    ]
   },
@@ -284,8 +312,10 @@
    "source": [
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
-    "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
-    "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
+    "target_labels: list[str] = [\"r23685bc_20100605_021022\"]\n",
+    "target_chunks: list[Metashape.Chunk] = [\n",
+    "    chunk for chunk in document.chunks if chunk.label in target_labels\n",
+    "]\n",
     "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01/stereo_range_maps\")\n",
     "\n",
